--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chart.js": "^3.7.1",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
+    "react-animated-heart": "^0.0.7-alpha.1",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.1.2",
     "react-chartjs-2": "^4.0.1",
