--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -10,6 +11,7 @@
     "boxicons": "^2.1.1",
     "chart.js": "^3.7.1",
     "dotenv": "^16.0.0",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-animated-heart": "^0.0.7-alpha.1",
     "react-animations": "^1.0.0",
@@ -33,7 +35,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
-    },
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
