--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
+    "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -12,7 +13,9 @@
     "boxicons": "^2.1.1",
     "chart.js": "^3.7.1",
     "dotenv": "^16.0.0",
+    "material-table": "^1.69.3",
     "react": "^17.0.2",
+    "react-animated-heart": "^0.0.7-alpha.1",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.1.2",
     "react-chartjs-2": "^4.0.1",
