--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "boxicons": "^2.1.1",
     "chart.js": "^3.7.1",
     "dotenv": "^16.0.0",
+    "ipfs-http-client": "^56.0.1",
     "material-table": "^1.69.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
