--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.1.2",
     "react-chartjs-2": "^4.0.1",
+    "react-countup": "^6.1.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-visibility-sensor": "^5.1.1",
     "sass": "^1.49.8",
     "scss": "^0.2.4",
     "serve": "^13.0.2",
