--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,14 @@
 /node_modules
 /.pnp
 .pnp.js
+config.js
+/src/artifacts
 
 # testing
 /coverage
 
 # production
 /build
-
 
 # misc
 .DS_Store
@@ -31,4 +32,5 @@ typechain
 
 #Hardhat files
 cache
+src/config.js
 hardhat.config.js
