--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@walletconnect/web3-provider": "^1.7.7",
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "boxicons": "^2.1.1",
@@ -32,7 +33,8 @@
     "styled-components": "^5.3.3",
     "swiper": "^8.0.6",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.6"
   },
   "scripts": {
     "dev": "react-scripts start",
