--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "scss": "^0.2.4",
     "serve": "^13.0.2",
     "styled-components": "^5.3.3",
+    "sweetalert2": "^11.4.8",
     "swiper": "^8.0.6",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
